5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2572.log
== TEST (2019-06-11 00:01:58) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)

for elemento in mat:
	if (elemento % 2 == 0):
			npar = npar + 1
	print(elemento)




# Par = Grupo 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:02:16) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 == 0):
			npar = npar + 1
	print(elemento)




# Par = Grupo 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:02:42) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 == 0):
			npar = npar + 1
	print(npar)




# Par = Grupo 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:06:06) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2== 0):
		x[0] = x[0] + 1
		npar = npar + 1
	elif (elemento % 2 != 0):
		x[1] = x[1] + 1
print(x)




# Par = Grupo 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:07:04) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2== 0):
		x[0] = x[0] + 1
		npar = npar + 1
	elif (elemento % 2 != 0):
		x[1] = x[1] + 1
print(x[1])






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:07:47) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
print(x)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:08:30) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	print(elemento2)
		
		
print(x)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:09:01) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	print(elemento2)
	elemento2 = elemento2 + 1
		
		
print(x)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:10:16) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	elemento2 = elemento2 + 1
	print(elemento2)
		
print(x)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:10:27) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	elemento2 = elemento2 + 1
	print(elemento2)
		
print(x)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:10:41) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	elemento2 = elemento2 + 1
	print(elemento2)
		
	print(x)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:11:12) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	elemento2 = elemento2 + 1
	print(elemento2)
a=x[0] 	
	print(a)






-- ERROR:
File "XXXX", line 13
    print(a)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:11:22) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	elemento2 = elemento2 + 1
	print(elemento2)

a=x[0] 	
	print(a)






-- ERROR:
File "XXXX", line 14
    print(a)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:11:37) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
a=x[0] 	
	print(a)

for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
for elemento2 in x:
	elemento2 = elemento2 + 1
	print(elemento2)

a=x[0] 	
	print(a)






-- ERROR:
File "XXXX", line 7
    print(a)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:45:50) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0
a=x[0] 	
	print(a)

for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
v = zeros(x[1], dtype=int)
i=0		
for elemento2 in mat:
	if(elemento2 % 2 != 0):
		v[i] = elemento2 
		i = i + 1
print(v)







-- ERROR:
File "XXXX", line 7
    print(a)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:45:55) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0

for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
v = zeros(x[1], dtype=int)
i=0		
for elemento2 in mat:
	if(elemento2 % 2 != 0):
		v[i] = elemento2 
		i = i + 1
print(v)







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:46:22) 
-- CODE:
from numpy import *

mat = array(eval(input("Matricula dos alunos: ")))
x = zeros(2,dtype=int)
npar = 0

for elemento in mat:
	if (elemento % 2 != 0):
		x[1] = x[1] + 1
v = zeros(x[1], dtype=int)
i=0		
for elemento2 in mat:
	if(elemento2 % 2 != 0):
		v[i] = elemento2 
		i = i + 1
print(v)







-- EXECUTION TIME:
1.00167
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
